fix: update API key authorization format and adjust image paths in StartScreen component style: refine button padding and list spacing in style.css

--- a/src/style.css
+++ b/src/style.css
@@ -43,7 +43,7 @@
     @apply bg-blue-950 basis-55/100 md:basis-1/2 gap-2 justify-center;
 
     button {
-      @apply bg-gray-200 md:p-8 pr-5 rounded-xs w-sm max-[28rem]:w-xs min-h-20 md:w-xl md:h-30 hover:bg-orange-100 duration-300;
+      @apply bg-gray-200 md:p-8 px-5 rounded-xs w-sm max-[28rem]:w-xs min-h-20 md:w-xl md:h-30 hover:bg-orange-100 duration-300;
     }
     p {
       @apply text-gray-950 font-semibold text-right text-lg md:text-xl;
@@ -68,15 +68,16 @@
   h4 {
     @apply bg-yellow-400 mt-12 p-3 mb-5 block w-fit font-bold rounded-sm;
   }
-  ul {
-    @apply space-y-4;
+  ul,
+  ol {
+    @apply space-y-5;
   }
   strong {
     @apply block;
   }
   p,
   strong {
-    @apply mb-2;
+    @apply mb-3;
   }
 }
 
